<resources>
    <string name="app_name">ott</string>
    <string name="shared_pref_key">OTT_DB</string>

    <!--    하드 코딩용    -->
    <string name="home_tv_hard_date">03.06</string>
    <string name="history_tv_hard_date">2022년 03월</string>

    <!--    로딩 다이얼로그    -->
    <string name="loading_dialog_message">잠시만 기다려주세요</string>

    <!--    홈     -->
    <string name="home_tv_title">응답하라 패밀리</string>
    <string name="home_tv_greeting">응답하라 패밀리!\n삐삐를 눌러서\n질문 미션에 응답해보세요!</string>
    <string name="home_tv_today_mission">오늘의 미션</string>
    <string name="home_tv_intro">가족들과 데일리 질문 미션과\n사진 미션을 통해\n서로의 추억을 공유하고, 쌓아가 보세요!</string>
    <string name="home_tv_first_greeting">응답하라 패밀리!\n첫 메세지를 남겨주세요</string>
    <string name="home_tv_first_message">3355/ Family</string>
    <string name="home_tv_first_btn">Start</string>
    <string name="home_tv_first_intro">삐삐를 통해 전달된 메세지 3353,\n바로 가족이 함께 모여야한다는 의미에요!</string>
    <string name="home_tv_done_greeting">오늘의 미션에 답변 완료\n했습니다 :)</string>

    <string name="home_drawer_family_code">가족 코드 보기</string>
    <string name="home_drawer_fix_nickname">닉네임 수정하기</string>
    <string name="home_drawer_producer">만든 이 보기</string>
    <string name="home_drawer_version">서비스 버전 보기</string>

    <!--    히스토리    -->
    <string name="history_graph_tv_intro">FAMILY MISSION WITH MONTHLY MISSION</string>
    <string name="history_graph_tv_title">💖%s 사랑 게이지💖</string>
    <string name="history_tab_mission">미션모음</string>
    <string name="history_tab_album">가족사진</string>

    <!-- Button 모음 -->
    <string name="btn_registration">등록하기</string>자
    <string name="btn_finish_answer">답변 완료하기</string>

    <!-- 이미지 접근 메세지 -->
    <string name="photo_appbar_main_title">깜짝 사진 업로드 미션</string>
    <string name="img_permission_dialog_title">이미지 접근 권한 허용을 거부하였습니다.</string>
    <string name="img_permission_dialog_message">사진을 첨부하기 위해서는 이미지 접근 권한이 필요합니다.기능 사용을 원하실 경우 휴대폰설정 > 애플리케이션 관리자에서 해당 앱의 권한을 허용해주세요.</string>
    <string name="img_permission_dialog_ok">설정</string>
    <string name="img_permission_dialog_dismiss">닫기</string>

    <!-- 사진 미션 -->
    <string name="photo_mission_tv_guide">사진 재현하기 미션</string>
    <string name="photo_mission_tv_past">과거 사진</string>
    <string name="photo_mission_tv_recent">현재 사진</string>
    <string name="photo_mission_comment">사진 코멘트</string>
    <string name="photo_mission_tv_guide2">과거에 찍었던 가족사진을\n포즈,의상,배경등을 비슷하게 재현하여\n다시 찍어봅시다</string>
    <string name="photo_mission_et_comment_hint">찍은 사진에 대한 이야기를 남겨주세요.. \n(40자 이내)</string>

    <!--    가족 사진관    -->
    <string name="album_appbar_main_title"> 가족 사진관</string>

    <!--    질문 미션   -->
    <string name="question_appbar_main_title">오늘의 질문</string>
    <string name="question_tv_guide">오-늘의 질-문</string>
    <string name="question_tv_don_look">☠️ 참고 사항 ☠️\n 가족 구성원 모두가 답변을 완료해야만\n열람가능해요!</string>
    <string name="question_tv_content_guide">채팅 내용</string>
    <string name="question_tv_nickname_guide">ID</string>
    <string name="photo_question_answer_hint">질문의 답변을 입력해주세요.. \n(100 이내)</string>

    <!--    온보딩     -->
    <string name="onboarding_btn_create_family">새로운 패밀리 만들기</string>
    <string name="onboarding_btn_enter_family">패밀리 참여하기</string>
    <string name="onboarding_tv_family_nickname">가족 닉네임 정하기</string>
    <string name="onboarding_btn_next">다음</string>
    <string name="onboarding_tv_my_nickname">내 닉네임 입력하기</string>
    <string name="onboarding_edt_hint_nickname">서로를 구분할 닉네임을 입력해주세요</string>
    <string name="onboarding_tv_hint_nickname">예) 예쁜엄마, 둘째 아들, 멋쟁이 할머니..</string>
    <string name="onboarding_tv_complete_code_description">가족 참여코드가 생성되었어요\n가족들에게 공유 후 시작해보세요!</string>
    <string name="onboarding_tv_description">가족 참여 코드</string>
    <string name="onboarding_tv_family_name">쭈꾸미네</string>
    <string name="onboarding_btn_copy">복사하기</string>
    <string name="onboarding_tv_enter_code">가족 참여 코드 입력하기</string>
    <string name="onboarding_edt_hint_code">가족 참여 코드를 입력해주세요..</string>
    <string name="onboarding_btn_complete">완료하기</string>
    <string name="onboarding_edt_hint_family_nickname">우리 가족 닉네임을 정해주세요..</string>

</resources>

