<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="thirdFragment"
            type="com.unithon.ott.presentation.ui.onboarding.StartFragment3" />

        <variable
            name="viewModel"
            type="com.unithon.ott.presentation.ui.onboarding.StartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <include
            android:id="@+id/start_appbar"
            layout="@layout/appbar"/>

        <TextView
            android:id="@+id/start_third_tv_title"
            style="@style/font_Heading6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="89dp"
            android:text="@string/onboarding_tv_my_nickname"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="136dp" />

        <EditText
            android:text="@={viewModel.nickname}"
            android:id="@+id/start_third_edt_nickname"
            style="@style/font_Heading6"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_onboarding_btn_white"
            android:gravity="center"
            android:hint="@string/onboarding_edt_hint_nickname"
            android:textColor="@color/white"
            android:textColorHint="@color/light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_third_tv_title"
            android:inputType="text" />

        <TextView
            android:id="@+id/start_third_tv_hint"
            style="@style/font_Heading6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/onboarding_tv_hint_nickname"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_third_edt_nickname"
            app:layout_constraintTop_toBottomOf="@id/start_third_edt_nickname" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_third_btn_complete"
            style="@style/font_Heading6"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/bg_onboarding_btn_black"
            android:text="@string/onboarding_btn_complete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>